--- a/DockerFile
+++ b/DockerFile
@@ -1,18 +1,18 @@
-# Use an official Python runtime as a parent image
+# Use Python slim image
 FROM python:3.9-slim
 
-# Set the working directory in the container
+# Set the working directory inside the container
 WORKDIR /app
 
 # Copy the current directory contents into the container
 COPY . /app
 
-# Install pip and dependencies
+# Install dependencies
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
-# Make port 80 available to the world outside this container
+# Expose the port (if needed)
 EXPOSE 80
 
-# Run main.py when the container launches
+# Command to run the bot
 CMD ["python", "main.py"]
