--- a/DockerFile
+++ b/DockerFile
@@ -7,9 +7,9 @@ WORKDIR /app
 # Copy the current directory contents into the container
 COPY . /app
 
-# Install dependencies
+# Update pip and install dependencies
 RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Expose the port (if needed)
 EXPOSE 80
