--- a/DockerFile
+++ b/DockerFile
@@ -4,12 +4,15 @@ FROM python:3.9-slim
 # Set the working directory inside the container
 WORKDIR /app
 
-# Copy the current directory contents into the container
-COPY . /app
+# Copy requirements.txt first to cache dependencies
+COPY requirements.txt .
 
 # Update pip and install dependencies
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy the rest of the app files
+COPY . /app
 
 # Expose the port (if needed)
 EXPOSE 80
