--- a/DockerFile
+++ b/DockerFile
@@ -1,17 +1,20 @@
 # Use Python slim image
 FROM python:3.9-slim
 
-# Set working directory inside the container
+# Set the working directory inside the container
 WORKDIR /app
 
 # Copy requirements.txt first to cache dependencies
 COPY requirements.txt .
 
-# Install dependencies
+# Update pip and install dependencies
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy app files
+# Debugging Step: Check if 'telegram' module is installed
+RUN python -c "import telegram; print('Module telegram is installed')"
+
+# Copy the rest of the app files
 COPY . /app
 
 # Expose the port (if needed)
