--- a/DockerFile
+++ b/DockerFile
@@ -4,11 +4,15 @@ FROM python:3.9-slim
 # Set the working directory inside the container
 WORKDIR /app
 
+# Install system dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gcc libffi-dev python3-dev musl-dev libpq-dev && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
+
 # Copy requirements.txt first to cache dependencies
 COPY requirements.txt .
 
-# Update pip and install dependencies
-RUN apt-get update && apt-get install -y gcc libffi-dev python3-dev musl-dev libpq-dev
+# Upgrade pip and install dependencies
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
