--- a/DockerFile
+++ b/DockerFile
@@ -4,16 +4,18 @@ FROM python:3.9-slim
 # Set the working directory inside the container
 WORKDIR /app
 
-# Copy and install dependencies
+# Copy requirements.txt first to cache dependencies
 COPY requirements.txt .
+
+# Update pip and install dependencies
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the app files
 COPY . /app
 
-# Expose the port (not mandatory, just for visibility)
+# Expose the port (if needed)
 EXPOSE 80
 
-# Start the bot
+# Command to run the bot
 CMD ["python", "main.py"]
